[package]
name = "fridge-tap-list"
version = "0.1.0"
authors = ["Linus Unnebäck <linus@folkdatorn.se>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32c6-hal", version = "0.6.0" }
esp-backtrace = { version = "0.9.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", default-features = false, features = ["esp32c6", "jtag-serial"] }
hex-literal = "0.4.1"
embedded-hal = "0.2.7"
